--- a/app/template/header.html
+++ b/app/template/header.html
@@ -1,7 +1,6 @@
-<a href="/#" class="logo">
+<a href="/#/" class="logo">
   <span class="logo-mini"><b>P</b>AP</span>
   <span class="logo-lg"><i class='fa fa-leaf'></i> <b>Primeira</b>APP</span>
-  
 </a>
 
 <nav class="navbar navbar-static-top">
