--- a/app/template/menu.html
+++ b/app/template/menu.html
@@ -1,1 +1,22 @@
-<h1>Menu</h1>
+<section class="sidebar">
+    <!-- div class="user-panel" ng-include="'/template/menu/user.html'"></div -->
+    <!-- div ng-include="'/template/menu/searchForm.html'"></div -->
+    <ul class="sidebar-menu">
+      <li class="header">NAVEGAÇÃO PRINCIPAL</li>
+      <li>
+        <a ui-sref="dashboard">
+          <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+        </a>
+      </li>
+  
+      <li class="treeview">
+         <a href>
+              <i class="fa fa-edit"></i> <span>Cadastros</span>
+              <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+          <li>
+            <a ui-sref="billingCycle"><i class="fa fa-usd"></i> Ciclo de Pagamentos</a>
+          </li>
+        </ul>
+</section>
