Ultima versão do Front-End

--- a/app/template/menu.html
+++ b/app/template/menu.html
@@ -18,5 +18,9 @@
           <li>
             <a ui-sref="billingCycle"><i class="fa fa-usd"></i> Ciclo de Pagamentos</a>
           </li>
+
+          <li>
+            <a ui-sref="billingCycle"><i class="fa fa-usd"></i> Funcionários</a>
+          </li>
         </ul>
 </section>
