--- a/app/template/menu/menu.html
+++ b/app/template/menu/menu.html
@@ -15,31 +15,34 @@
 		        <i class="fa fa-angle-left pull-right"></i>
 		  </a>
 		  <ul class="treeview-menu">
-		    <li>
-		      <a ui-sref="billingCycle"><i class="fa fa-usd"></i> Ciclo de Pagamentos</a>
-		    </li>
-		  </ul>
+				
+				<li>
+					<a ui-sref="billingCycle"><i class="fa fa-usd"></i> Ciclo de Pagamentos</a>
+				</li>
+
+				<li>
+					<a ui-sref="#"><i class="fa fa-briefcase"></i> Funcionários</a>
+				</li>
+	
+				<li>
+					<a ui-sref="#"><i class="fa fa-truck"></i> Fornecedores</a>
+				</li>
+			</ul>
+			
 		</li>
-		<li class="header">TECNOLOGIAS</li>
+		<li class="header">SISTEMA</li>
+		
 		<li>
-			<a href="https://www.mongodb.com" target="_blank">
-				<i class="fa fa-circle-o text-red"></i> <span>MongoDB</span>
+			<a href="#" target="_self">
+				<i class="fa fa-info-circle text-blue"></i> <span>Sobre</span>
 			</a>
 		</li>
+
 		<li>
-			<a href="http://expressjs.com" target="_blank">
-				<i class="fa fa-circle-o text-yellow"></i> <span>Express</span>
+			<a href="#" target="_self">
+				<i class="fa fa-close text-red"></i> <span>Sair</span>
 			</a>
 		</li>
-		<li>
-			<a href="https://angularjs.org" target="_blank">
-				<i class="fa fa-circle-o text-aqua"></i> <span>Angular</span>
-			</a>
-		</li>
-		<li>
-			<a href="https://nodejs.org" target="_blank">
-				<i class="fa fa-circle-o text-green"></i> <span>Node</span>
-			</a>
-		</li>
+		
 	</ul>
 </section>
