--- a/app/template/menu/menu.html
+++ b/app/template/menu/menu.html
@@ -17,7 +17,7 @@
 		  <ul class="treeview-menu">
 				
 				<li>
-					<a ui-sref="billingCycle"><i class="fa fa-usd"></i> Ciclo de Pagamentos</a>
+					<a ui-sref="billingCycle"><i class="fa fa-usd"></i> Financeiro</a>
 				</li>
 
 				<li>
@@ -37,12 +37,5 @@
 				<i class="fa fa-info-circle text-blue"></i> <span>Sobre</span>
 			</a>
 		</li>
-
-		<li>
-			<a href="#" target="_self">
-				<i class="fa fa-close text-red"></i> <span>Sair</span>
-			</a>
-		</li>
-		
 	</ul>
 </section>
