--- a/app/template/menu/menu.html
+++ b/app/template/menu/menu.html
@@ -21,11 +21,11 @@
 				</li>
 
 				<li>
-					<a ui-sref="#"><i class="fa fa-briefcase"></i> Funcionários</a>
+					<a ui-sref="funcionario"><i class="fa fa-briefcase"></i> Funcionário</a>
 				</li>
 	
 				<li>
-					<a ui-sref="#"><i class="fa fa-truck"></i> Fornecedores</a>
+					<a ui-sref="#"><i class="fa fa-truck"></i> Fornecedor</a>
 				</li>
 			</ul>
 			
