Refectory - Assers funcionario

--- a/app/template/header/navbar/navbar.html
+++ b/app/template/header/navbar/navbar.html
@@ -1,6 +1,9 @@
 <a href class="sidebar-toggle" data-toggle="offcanvas" role="button">
   <span class="sr-only">Toggle navigation</span>
 </a>
+
+<!-- <i class="fa fa-home"></i> -->
+  
 <div class="navbar-custom-menu">
   <ul class="nav navbar-nav">
     <!-- <li class="dropdown messages-menu" ng-include="'/template/header/navbar/messages.html'"></li> -->
