Refactory - cadastro funcionario

--- a/app/template/menu/menu.html
+++ b/app/template/menu/menu.html
@@ -12,7 +12,7 @@
 			</a>
 			<ul class="treeview-menu">
 				<li>
-					<a ui-sref="#">
+					<a ui-sref="cliente">
 						<i class="fa fa-users"></i> Cliente</a>
 				</li>
 
